--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,4 @@
   }
 </style>
 
-<div class="content" role="main">
-  <h1>Welcome to {{title}}!</h1>
-  <h2>Start editing to see some magic happen</h2>
-</div>
+<app-clock></app-clock>
